# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2023-12-26-130521_create_subscriptions/: up.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  models.rs  schema.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
