[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6.20"}
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4.20"
reqwest = "0.11.22"
hyper = "0.14.27"
serde = { version = "1.0.193", features = ["derive"] }
config = "0.13.4"
uuid = { version = "1.6.1", features = ["v6", "v4"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing-core = "0.1.32"
env_logger = "0.10.1"
tracing = { version = "0.1.40", features = ["log"]  }


[dev-dependencies]
reqwest = "0.11.22"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
