[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6.20"}
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4.20"
reqwest = "0.11.22"
hyper = "0.14.27"
serde = { version = "1.0.193", features = ["derive"] }
config = "0.13.4"
uuid = { version = "1.6.1", features = ["v6", "v4"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing-core = "0.1.32"
env_logger = "0.10.1"
tracing = { version = "0.1.40", features = ["log"]  }
diesel = { version = "2.1.4", features = ["postgres", "postgres_backend", "r2d2"] }
dotenvy = "0.15.7"
chrono = "0.4.31"
rand = { version = "0.8.5", features = [] }


[dev-dependencies]
reqwest = "0.11.22"


